--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bulma": "^0.5.0",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
+    "mongoose": "^4.11.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
