--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.15.3",
     "mongoose": "^4.11.6",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2"
   }
 }
