--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "eslint-plugin-react": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bulma": "^0.5.0",
+    "connect-mongo": "^1.3.2",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
+    "express-session": "^1.15.5",
     "mongoose": "^4.11.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
