--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "bulma": "^0.5.0",
+    "classnames": "^2.2.5",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
     "mongoose": "^4.11.6",
