--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
     "bulma": "^0.5.0",
     "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
     "mongoose": "^4.11.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2"
