--- a/package.json
+++ b/package.json
@@ -19,24 +19,26 @@
   "license": "",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.0",
+    "css-loader": "^0.28.4",
     "electron": "~1.6.2",
+    "eslint": "^3.0.1",
+    "eslint-plugin-react": "^5.2.2",
     "loglevel": "^1.4.1",
     "nodemon": "^1.11.0",
     "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.6.0",
-    "babel-eslint": "^6.1.0",
-    "eslint": "^3.0.1",
-    "eslint-plugin-react": "^5.2.2"
+    "webpack-dev-server": "^2.6.0"
   },
   "dependencies": {
     "bulma": "^0.5.0",
     "draft-js": "^0.10.1",
     "express": "^4.15.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "style-loader": "^0.18.2"
   }
 }
